--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Movies</string>
     <string name="no_results">No results</string>
+    <string name="error_load_more">Oops, error occurred. Tap to retry!</string>
 </resources>
